src/main/java/com/example/faceToInterface/bad/Foot.java
package com.example.faceToInterface.bad;

/**
 * @author: xiongchaohua
 * @Des :
 * @create: 2021-07-15 18:16
 **/
public class Foot {
    public void move() {
        System.out.println("move by foot");
    }
}
